Fix changing root data dir